--- a/ContosoUniversity/ContosoUniversity/Views/Home/About.cshtml
+++ b/ContosoUniversity/ContosoUniversity/Views/Home/About.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ContosoUniversity.Models.SchoolViewModels.EnrollmentDateGroup>
+﻿@model IEnumerable<ContosoUniversity.ViewModels.EnrollmentDateGroup>
 
 @{
     ViewData["Title"] = "Student Body Statistics";
