--- a/ContosoUniversity/ContosoUniversity/Views/Instructors/Index.cshtml
+++ b/ContosoUniversity/ContosoUniversity/Views/Instructors/Index.cshtml
@@ -47,7 +47,7 @@
                 <td>
                     @foreach (var course in item.CourseAssignments)
                     {
-                        @course.Course.CourseID @course.Course.Title <br />
+                        @course.Course.CourseID <span> </span>  @course.Course.Title <br />
                     }
                 </td>
                 <td>
